Deployment_k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-microservice-app-svc
spec:
  selector:
    app: python-microservice-app
  ports:
  - port: 5000
    protocol: TCP
