Deployment_k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: production
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: microservices-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: sherifemad-microservice.s-tech.digital
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: python-microservice-app-svc
              port: 
                number: 5000
  tls:
    - hosts:
        - sherifemad-microservice.s-tech.digital
      secretName: secret-tls-stage
